--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon --ignore feedback.json server.js"
+    "test": "node try.js"
   },
   "keywords": [],
   "author": "",
