--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -12,18 +12,21 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [16.x, 17.x, 19.x, 21.x, 22.x]
+    #strategy:
+     # matrix:
+        #node-version: [16.x, 17.x, 19.x, 21.x, 22.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
+
+    
     steps:
     - uses: actions/checkout@v4
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
+   # - name: Use Node.js ${{ matrix.node-version }}
+    - uses: actions/setup-node@v4
       with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
+        #node-version: ${{ matrix.node-version }}
+        node-version: 20
+        #cache: 'npm'
     - run: npm ci
-    - run: npm run build --if-present
+    #- run: npm run build --if-present
     - run: npm test
