--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -27,6 +27,6 @@ jobs:
         #node-version: ${{ matrix.node-version }}
         node-version: 20
         #cache: 'npm'
-    - run: npm install
+    - run: npm ci
     #- run: npm run build --if-present
     - run: source ./test.sh
