--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon --ignore feedback.json server.js",
-    "test": "node try.js"
+    "test": "node try_original.js"
   },
   "keywords": [],
   "author": "",
