--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -6,6 +6,8 @@ name: Integration
 on:
   workflow_call:
   workflow_dispatch:
+  repository_dispatch:
+   types: [trigger-integration]
 
 jobs:
   integration:
